apps/pretalx/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pretalx
  namespace: pretalx
spec:
  selector:
    app.kubernetes.io/name: pretalx
  ports:
    - name: http
      port: 80
      targetPort: http
